# AstralAgent

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml  run.py
.cursor/rules/: Architect.mdc
app/: main.py
app/core/: config.py
backend/: README.md  env.example  pyproject.toml  run.py
backend/app/: factory.py  factory_lifespan.py  factory_middleware.py  factory_routes.py  main.py
backend/app/api/: system.py
backend/app/core/: __init__.py
backend/app/core/config/: __init__.py  base.py  loader.py  models.py  registry.py
backend/app/core/config/providers/: __init__.py  env_provider.py  toml_provider.py
backend/app/core/di/: __init__.py  container.py  decorators.py
backend/app/core/exceptions/: __init__.py  api_exceptions.py  base.py  error_codes.py  handlers.py  i18n.py
backend/app/core/logging/: __init__.py  logger.py  middleware.py
backend/app/core/monitoring/: __init__.py  health.py  metrics.py  middleware.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/cache/: __init__.py  client.py  middleware.py
backend/app/infrastructure/database/: __init__.py  middleware.py  session.py
backend/app/infrastructure/middleware/: __init__.py  base.py  manager.py
backend/app/locales/en-US/: errors.yaml
backend/app/locales/ja-JP/: errors.yaml
backend/app/locales/zh-CN/: errors.yaml
docs/: API 使用指南.md  API_USAGE.md  FRONTEND_MOBILE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  最终架构设计方案.md  项目结构说明.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+15 files in other folders)
